# pete.sh

./: .aerospace.toml  .cursorrules  .editorconfig  .env  .env.example  .env.production  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  GOOGLE_API_SETUP.md  README.md  aeros.md  deploy.ps1  deploy.sh  ecosystem.config.js  just wow things.txt  middleware.ts  monitor_dump.csv  next.config.js  next.config.mjs  package.json  petehome  petehome.cmd  petehome.code-workspace  petehome.service  petehome.txt  prettier.config.js  tailwind.config.js  tsconfig.json  workout_response.json
.claude/: settings.local.json
app/: globals.css  layout.tsx  manifest.json
apps/cli/: pyproject.toml
apps/cli/petehome_cli/: __init__.py  __main__.py  app.py  config.py  styles.tcss
apps/cli/petehome_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/cli/petehome_cli/commands/: __init__.py  deploy.py  dev.py  git.py  migrate.py  pm2.py
apps/cli/petehome_cli/services/: __init__.py  dev_server.py  github.py  pm2.py  ports.py  process.py  settings.py  supabase.py  vercel.py
apps/cli/scripts/: install.ps1
apps/cli/v2/: pyproject.toml
apps/cli/v2/armhr_cli/: __init__.py  __main__.py  app.py  config.py  styles.tcss
apps/cli/v2/armhr_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/cli/v2/armhr_cli/commands/: __init__.py  auth.py  backend.py  env.py  frontend.py  git.py  servers.py
apps/cli/v2/armhr_cli/services/: __init__.py  api.py  auth.py  envfile.py  github.py  ports.py  process.py  settings.py
(+1445 files in other folders)
