[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "armhr-cli"
version = "1.0.0"
description = "Interactive CLI for armhr development"
dependencies = [
    "textual>=3.0.0",
    "textual-autocomplete>=4.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
armhr = "armhr_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
